# new

./: Chromium.lnk  Microsoft Edge.lnk  Postman.lnk  Privacy Policy for FireFox-2.docx  code.txt  code_new_1.txt  final_code.txt  policyapply.sh
Policy file/: Privacy Policy for Chrome-2.docx  chromepolicy.ps1  firefoxpolicy.ps1
maa-dataops-example-solutions-dev/: .gitattributes  .gitignore  CODEOWNERS  README.md
maa-dataops-example-solutions-dev/data_ops_blueprints_example/: dbchangelog.yml  pyproject.toml
maa-dataops-example-solutions-dev/data_ops_blueprints_example/tables/: insert_data.sql  test_property_subs.sql
maa-dataops-example-solutions-dev/data_ops_blueprints_example/tests/: conftest.py  test_property_subs.py
maa-dataops-example-solutions-dev/databricks_aae_gov_marketing_ddl/: main.changelog.xml  pyproject.toml
maa-dataops-example-solutions-dev/databricks_aae_gov_marketing_ddl/tables/: adhoc_sql_audit.sql  adhoc_tracker.sql  adobe.sql  application_exceptions.sql  apps_matches.sql  cdo_mbr_enrlmt_cvrg.sql  export_audit_table.sql  lead_exceptions.sql  leads_matches.sql  mail_src_ddl.sql  mail_src_updt.sql  sfdc_campaign.sql  sfdc_campaign_request_detail__c.sql  sfdc_contact.sql  sfdc_cti_inbound_call_log__c.sql  sfdc_cti_non_lead_call__c.sql  sfdc_do_not_contact__c.sql  sfdc_geographic_and_territory_matrix__c.sql  sfdc_parent_campaign__c.sql
maa-dataops-example-solutions-dev/dataops_custom_dags/: pyproject.toml
maa-dataops-example-solutions-dev/dataops_custom_dags/dags/: dag_hourly.py
test/: test2.py  test3.py
